# RAG-MCP

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  rag_mcp_architecture_project_document.md  scratch.py  scratch3.py
docs/guide/: how-to-guide.md  quick-setup.md  system-architecture.md
src/rag_mcp/: __init__.py  config.py  log.py  main.py  models.py
src/rag_mcp/engine/: __init__.py  chunker.py  embedder.py  metadata_store.py  rag_engine.py  vector_store.py
src/rag_mcp/ingestion/: __init__.py  file.py  url.py  youtube.py
src/rag_mcp/mcp/: __init__.py  server.py
src/rag_mcp/mcp/tools/: ingestion.py  management.py  retrieval.py
src/rag_mcp/security/: ssrf.py
src/rag_mcp/upload/: __init__.py  router.py  sessions.py
tests/: test_smoke.py
upload-ui/: app.js  index.html  style.css
