[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-mcp"
version = "0.1.0"
description = "Universal Knowledge Ingestion & Retrieval Layer for MCP Clients"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ankit" },
]
keywords = ["mcp", "rag", "knowledge", "retrieval", "embeddings", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastmcp>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "youtube-transcript-api>=0.6.0",
    "python-multipart>=0.0.9",
    "sqlite-utils>=3.36",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]
pdf = [
    "unstructured[pdf]>=0.15.0",
]
docx = [
    "python-docx>=1.1.0",
]

[project.scripts]
rag-mcp = "rag_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
